Fixes for Safari: --- - Fixed issue with Safari styling on IFrame. - Fixed issue with downloads being blocked in PDocs on Safari. - Fixed scaling issue with shared document screen on Safari.

--- a/src/client/components/Pages/SharedDocument.scss
+++ b/src/client/components/Pages/SharedDocument.scss
@@ -19,7 +19,7 @@
  * @Author: Michael Harrison
  * @Date:   2019-03-29T10:46:51+11:00
  * @Last modified by:   Michael Harrison
- * @Last modified time: 2019-04-11T16:07:31+10:00
+ * @Last modified time: 2019-04-26T08:51:46+10:00
  */
 
 @import "../../style/global_colors.scss";
@@ -31,6 +31,7 @@
   .lowerGroup {
     flex-grow: 1;
     display: flex;
+    flex-direction: column;
 
     .SplitPane {
       flex-grow: 1;
