--- a/src/client/style/global_styles.scss
+++ b/src/client/style/global_styles.scss
@@ -74,6 +74,7 @@ body {
 
 iframe {
   border: none;
+  flex-grow: 1;
 }
 
 #root {
